<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dim8dp"
    app:cardCornerRadius="@dimen/dim16dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/dim16dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/default_name"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar" />

        <TextView
            android:id="@+id/published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/default_date"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintStart_toEndOf="@+id/avatar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/avatar" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/event_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attachLayout" />

        <include
            android:id="@+id/attachLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            layout="@layout/attachment"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dim16dp"
            android:layout_marginEnd="@dimen/dim16dp"
            android:layout_marginTop="@dimen/dim8dp"
            android:background="@color/divider_color"
            app:layout_constraintTop_toBottomOf="@id/content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/whenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim16dp"
            android:text="@string/Date"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/whereTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/Location"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whenTextView" />

        <TextView
            android:id="@+id/dateOfEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_date_of_event"
            android:layout_marginStart="@dimen/dim16dp"
            app:layout_constraintStart_toEndOf="@+id/whenTextView"
            app:layout_constraintTop_toTopOf="@+id/whenTextView" />

        <TextView
            android:id="@+id/locationOfEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_city"
            android:layout_marginStart="@dimen/dim16dp"
            app:layout_constraintStart_toEndOf="@+id/whereTextView"
            app:layout_constraintTop_toTopOf="@+id/whereTextView" />

        <TextView
            android:id="@+id/speakersTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Спикеры:"
            android:layout_marginTop="@dimen/dim8dp"
            app:layout_constraintStart_toStartOf="@+id/formatTextView"
            app:layout_constraintTop_toBottomOf="@+id/whereTextView" />

        <TextView
            android:id="@+id/speakers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginStart="@dimen/dim16dp"
            app:layout_constraintTop_toTopOf="@id/speakersTextView"
            app:layout_constraintStart_toEndOf="@id/speakersTextView"
            />


        <TextView
            android:id="@+id/participantsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim8dp"
            android:textStyle="bold"
            android:text="Участники:"
            app:layout_constraintStart_toStartOf="@+id/speakersTextView"
            app:layout_constraintTop_toBottomOf="@+id/speakers" />

        <TextView
            android:id="@+id/participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginStart="@dimen/dim16dp"
            app:layout_constraintStart_toEndOf="@id/participantsTextView"
            app:layout_constraintTop_toTopOf="@id/participantsTextView"
            />

        <TextView
            android:id="@+id/formatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim8dp"
            android:layout_marginStart="8dp"
            android:text="@string/format"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/participants" />
        <TextView
            android:id="@+id/typeOfEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim16dp"
            android:text="@string/default_format"
            app:layout_constraintStart_toEndOf="@+id/formatTextView"
            app:layout_constraintTop_toTopOf="@+id/formatTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/likeBtn"
            style="@style/Widget.AppTheme.LikeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/def_likes"
            android:checkable="true"
            app:icon="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintEnd_toEndOf="@+id/content"
            app:layout_constraintTop_toBottomOf="@+id/formatTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareBtn"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:icon="@drawable/ic_baseline_share_24"
            app:layout_constraintEnd_toStartOf="@+id/likeBtn"
            app:layout_constraintTop_toTopOf="@+id/likeBtn" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
