<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.screens.NewJobFragment">

    <FrameLayout
        android:id="@+id/toolBarFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim48dp"
        android:background="@color/color_primary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBtn"
        style="@style/Widget.AppTheme.WhiteIconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:icon="@drawable/ic_baseline_close_24" />

    <TextView
        style="@style/TextAppearance.AppCompat.WhiteCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Добавить работу"
        />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveJobBtn"
            style="@style/Widget.AppTheme.WhiteIconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:icon="@drawable/ic_baseline_done_24" />

    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/dim16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/jobEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/job"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/positionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jobEditText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/startJobEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Дата начала"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/positionEditText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/startDateBtn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_calendar_month_24"
                app:layout_constraintStart_toEndOf="@+id/editText"
                tools:layout_editor_absoluteY="16dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/endJobEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Дата окончания"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/positionEditText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/endDateBtn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_calendar_month_24"
                app:layout_constraintStart_toEndOf="@+id/editText"
                tools:layout_editor_absoluteY="16dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/linkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/web_site"
            />


    </LinearLayout>


</LinearLayout>